--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         format_sql: true
         use_sql_comments: true
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_community
+    url: jdbc:mysql://localhost:3306/molip
     driverClassName: com.mysql.cj.jdbc.Driver
     username: ${LOCAL_MYSQL_USERNAME:root}
     password: ${LOCAL_MYSQL_PASSWORD:00000000}
