--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,17 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     username: ${LOCAL_MYSQL_USERNAME:root}
     password: ${LOCAL_MYSQL_PASSWORD:00000000}
+
+
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+    groups.enabled: true
+
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    display-request-duration: true
+    persistAuthorization: true
