--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
     password: ${LOCAL_MYSQL_PASSWORD:00000000}
 
 
+jwt:
+  secret: ${JWT_SECRET:test-secret-key-test-secret-key-test-secret-key-test-secret-key}
+  access-expiration-ms: ${ACCESS_EXPIRATION_MS:3600000}
+  refresh-expiration-ms: ${REFRESH_EXPIRATION_MS:86400000}
 
 springdoc:
   api-docs:
