--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,11 @@ dependencies {
 
     // Database - p6spy
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+
+    // Aws
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
+    implementation platform('software.amazon.awssdk:bom:2.25.46')
+    implementation 'software.amazon.awssdk:s3'
 }
 
 tasks.named('test') {
