--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
         format_sql: true
         use_sql_comments: true
   datasource:
-    url: jdbc:mysql://localhost:3306/molip
+    url: ${MYSQL_URL:jdbc:mysql://localhost:3306/molip}
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: ${LOCAL_MYSQL_USERNAME:root}
-    password: ${LOCAL_MYSQL_PASSWORD:00000000}
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:00000000}
   servlet:
     multipart:
       max-file-size: 10MB
