--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,24 @@
 server:
   port: 8080
 
+
 spring:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
   datasource:
-    url: ${MYSQL_URL:jdbc:mysql://localhost:3306/molip}
+    url: ${MYSQL_URL}
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: ${MYSQL_USERNAME:root}
-    password: ${MYSQL_PASSWORD:00000000}
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
+  sql:
+    init:
+      mode: always
+      encoding: utf-8
   servlet:
     multipart:
       max-file-size: 10MB
@@ -21,13 +26,13 @@ spring:
   cloud:
     aws:
       s3:
-        access-key: ${AWS_S3_ACCESS_KEY:test-access-key}
-        secret-key: ${AWS_S3_SECRET_KEY:test-secret-key}
-        bucket: ${AWS_S3_BUCKET:test-bucket}
+        access-key: ${AWS_S3_ACCESS_KEY}
+        secret-key: ${AWS_S3_SECRET_KEY}
+        bucket: ${AWS_S3_BUCKET}
 
 
 jwt:
-  secret: ${JWT_SECRET:test-secret-key-test-secret-key-test-secret-key-test-secret-key}
+  secret: ${JWT_SECRET}
   access-expiration-ms: ${ACCESS_EXPIRATION_MS:3600000}
   refresh-expiration-ms: ${REFRESH_EXPIRATION_MS:86400000}
 
