--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -28,17 +28,17 @@ jobs:
     name: Build BE Artifact (main)
     runs-on: ubuntu-latest
 
-    if: |
-      (
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.merged == true &&
-        github.event.pull_request.base.ref == 'main' &&
-        (
-          startsWith(github.event.pull_request.head.ref, 'feature/ci-cd')
-        )
-      )
-      ||
-      (github.event_name == 'workflow_dispatch')
+    # if: |
+    #   (
+    #     github.event_name == 'pull_request' &&
+    #     github.event.pull_request.merged == true &&
+    #     github.event.pull_request.base.ref == 'main' &&
+    #     (
+    #       startsWith(github.event.pull_request.head.ref, 'feature/ci-cd')
+    #     )
+    #   )
+    #   ||
+    #   (github.event_name == 'workflow_dispatch')
 
     steps:
       - name: Checkout
@@ -88,10 +88,10 @@ jobs:
           if-no-files-found: error
           retention-days: 7
 
-  deploy-production:
-    name: Deploy BE to Production (Blue-Green)
-    runs-on: ubuntu-latest
-    needs: build-artifact
+  # deploy-production:
+  #   name: Deploy BE to Production (Blue-Green)
+  #   runs-on: ubuntu-latest
+  #   needs: build-artifact
 
     #environment:
     #  name: production
