--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -150,7 +150,7 @@ jobs:
     
   deploy_gcp:
     name: Deploy to GCP (main)
-    needs: build-artifact
+    needs: build
     runs-on: ubuntu-latest
     #if: github.ref == 'refs/heads/main'
     env:
