--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -165,7 +165,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: be-app
+          name: be-app-build
           path: .
 
       - name: Authenticate to GCP
