--- a/.github/workflows/be-bigbang-ci.yml
+++ b/.github/workflows/be-bigbang-ci.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Initialize CodeQL
+        if: >
+          (github.event_name == 'pull_request' &&
+          (github.base_ref == 'main' || startsWith(github.base_ref, 'release/'))) ||
+          (github.event_name == 'push' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')))
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java
+
       - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
@@ -49,13 +59,13 @@ jobs:
         run: ./gradlew spotbugsMain spotbugsTest --no-daemon
 
       # 보안 분석 (release/main 브랜치만)
-      - name: Security - Dependency Check
+      - name: Perform CodeQL Analysis
         if: >
-          (github.event_name == 'pull_request' && 
-           (github.base_ref == 'main' || startsWith(github.base_ref, 'release/'))) ||
-          (github.event_name == 'push' && 
-           (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')))
-        run: ./gradlew dependencyCheckAnalyze --no-daemon
+          (github.event_name == 'pull_request' &&
+          (github.base_ref == 'main' || startsWith(github.base_ref, 'release/'))) ||
+          (github.event_name == 'push' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')))
+        uses: github/codeql-action/analyze@v3
 
       # 리포트 업로드 (실패 시)
       - name: Upload Test Results
@@ -82,14 +92,3 @@ jobs:
           name: coverage-report
           path: backend/build/reports/jacoco/test/html/
 
-      - name: Upload Security Report
-        if: >
-          success() &&
-          ((github.event_name == 'pull_request' && 
-            (github.base_ref == 'main' || startsWith(github.base_ref, 'release/'))) ||
-           (github.event_name == 'push' && 
-            (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/'))))
-        uses: actions/upload-artifact@v4
-        with:
-          name: security-report
-          path: backend/build/reports/dependency-check-report.html
