cd : 테스트 빌드 2

--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -176,9 +176,11 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
 
-
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: compute
 
       - name: Force set active project (critical)
         shell: bash
