--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -252,7 +252,7 @@ jobs:
           TS="$(date +%Y%m%d%H%M%S)"
           NEW_REL="${RELEASE_DIR}/${TS}"
           sudo mkdir -p "${NEW_REL}"
-          tar -xzf /tmp/be-app.tar.gz -C "${NEW_REL}"
+          tar -xzf /tmp/app.tar.gz -C "${NEW_REL}"
           [ -f "${NEW_REL}/app.jar" ] || { echo "FAIL: app.jar not found"; exit 1; }
           ln -sfn "${NEW_REL}" "${CURRENT_DIR}"
           
