--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -286,7 +286,7 @@ jobs:
            # 배포
           echo "== Start IDLE process =="
           sudo pm2 delete "${IDLE_PM2}" >/dev/null 2>&1 || true
-          sudo pm2 start "${ECOSYSTEM}" --only "${IDLE_PM2}" --env production
+          sudo pm2 start ecosystem.config.js --only "${IDLE_PM2}" --env production
           
           echo "== Health check IDLE (max 60s) =="
           for i in {1..30}; do
