fix: run pm2 at APP_DIR

--- a/.github/workflows/be-bigbang-cd.yml
+++ b/.github/workflows/be-bigbang-cd.yml
@@ -295,8 +295,7 @@ jobs:
           ls -al "${APP_DIR}" || true
 
           sudo pm2 delete "${IDLE_PM2}" >/dev/null 2>&1 || true
-          sudo pm2 start ecosystem.config.js --only "${IDLE_PM2}" --env production
-          
+          sudo pm2 start "${APP_DIR}/ecosystem.config.js" --only "${IDLE_PM2}" --env production          
           echo "== Health check IDLE (max 60s) =="
           for i in {1..30}; do
           if curl -fsS "${IDLE_HEALTH}" >/dev/null; then
