feat: polling 방식으로 알림 발송 및 scheduling 설정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -24,3 +24,14 @@ jwt:
   secret: test-secret-key-test-secret-key-test-secret-key-test-secret-key
   access-expiration-ms: 3600000
   refresh-expiration-ms: 86400000
+
+
+fcm:
+  enabled: false
+  project-id: test-id
+  credentials-json: test-json
+
+notification:
+  dispatch:
+    fixed-delay-ms: 60000
+    batch-size: 100
