--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "io.micrometer:micrometer-registry-prometheus"
 
+    // FCM
+    implementation 'com.google.firebase:firebase-admin:9.3.0'
+
 
 }
 
