--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,13 @@ management:
   metrics:
     tags:
       application: molip   # optional label
+
+fcm:
+  enabled: ${FCM_ENABLED}
+  project-id: ${FCM_PROJECT_ID}
+  credentials-json: ${FCM_CREDENTIALS_JSON}
+
+notification:
+  dispatch:
+    fixed-delay-ms: ${NOTIFICATION_DISPATCH_DELAY_MS}
+    batch-size: ${NOTIFICATION_DISPATCH_BATCH_SIZE}
