feat: ai 배치 응답 기능 동기로 구현

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -24,3 +24,8 @@ jwt:
   secret: test-secret-key-test-secret-key-test-secret-key-test-secret-key
   access-expiration-ms: 3600000
   refresh-expiration-ms: 86400000
+
+ai:
+  planner:
+    base-url: http://localhost
+    timeout-ms: 300000
