added monitoring features

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,7 +61,12 @@ management:
         enabled: true
   metrics:
     tags:
-      application: molip   # optional label
+      application: molip
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
 
 ai:
   planner:
