hotfix: enabled hibernate metrics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,6 +65,8 @@ management:
       probes:
         enabled: true
   metrics:
+    enable:
+      hibernate: true
     tags:
       application: molip
     distribution:
